something something auth

--- a/backend/src/static/index.html
+++ b/backend/src/static/index.html
@@ -14,7 +14,7 @@
 				Welcome. Everything is fine.
 				</p>
 				
-				<a href="http://localhost:5000/api/auth/github" class="m-5$ btn-blue margin">Github Magic ✨</href>
+				<a href="https://218e-184-148-0-86.ngrok.io/api/auth/github" class="m-5$ btn-blue margin">Github Magic ✨</href>
 				
 			</div> 
 		</div>
