github app installation auth flow complete, private repo cloning complete

--- a/backend/src/static/index.html
+++ b/backend/src/static/index.html
@@ -16,6 +16,8 @@
 				</p>
 				<div id="link" class="m-5 margin"> 
 					<!-- link will be injected here-->
+
+					<a href="https://github.com/apps/gourcewizard/installations/new" class="btn-blue"> Install Our App! ✨</a>
 				</div>
 			</div>
 		</div>
