name changes, and button shifts

--- a/backend/src/static/index.html
+++ b/backend/src/static/index.html
@@ -14,15 +14,19 @@
 
 		<div class="flex h-screen items-center justify-center flex-col">
 			<p class="margin text-center text-5xl">
-				Welcome. Everything is fine.
-				</p>
-				<div id="link" class="m-5 margin"> 
-					<!-- link will be injected here-->
+				Welcome!
+			</p>
+			<p class="margin text-center text-4xl">
+				Visualize your repositories here using Gource.
+			</p>
+			<div id="link" class="m-5 margin">
+				<!-- link will be injected here-->
 
-					<a href="https://github.com/apps/gourcewizard/installations/new" class="btn-blue"> Install Our App! ✨</a>
-				</div>
+				<a href="https://github.com/apps/gourcewizard/installations/new" class="btn-blue"> Install Our App!
+					✨</a>
 			</div>
 		</div>
+	</div>
 	</div>
 </body>
 
