--- a/backend/src/static/index.html
+++ b/backend/src/static/index.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" href="./style.css">
 	<script src="./link.js" defer></script>
 	<meta charset="utf-8" />
+	<title>Gource Wizard</title>
 </head>
 
 <body>
